dynamix/force-app/main/default/objects/CIF_Form__c/CIF_Form__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CIF Form</label>
</CustomObject>