dynamix/force-app/main/default/objects/CIF_Form__c/fields/Disable_OTP__c.field-meta.xml
<CustomField>
    <fullName>Disable_OTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable OTP</label>
    <type>Checkbox</type>
</CustomField>