dynamix/force-app/main/default/objects/CIF_Form__c/fields/Disable_Till__c.field-meta.xml
<CustomField>
    <fullName>Disable_Till__c</fullName>
    <label>Disable Till</label>
    <type>DateTime</type>
</CustomField>