dynamix/force-app/main/default/objects/CIF_Form__c/fields/Disable_Time__c.field-meta.xml
<CustomField>
    <fullName>Disable_Time__c</fullName>
    <label>Disable Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>