dynamix/force-app/main/default/objects/CIF_Form__c/fields/Set_Opportunity_Feild_as_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Set_Opportunity_Feild_as_Read_Only__c</fullName>
    <label>Set Opportunity Feild as Read Only</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>